<resources>
    <string name="app_name">EventsApp</string>
    <string name="email">Email</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="login_in">Log In</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in Here</string>
    <string name="sign_in">Sign In</string>
    <string name="yes">Yes</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="title_activity_user2">UserActivity2</string>
    <string name="your_profile">Your Profile</string>
    <string name="full_name">Full Name</string>
    <string name="your_name_here">Your name here</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_here">Phone Number here</string>
    <string name="email_address">Email Address</string>
    <string name="your_emailid_here">Your Emailid here</string>
    <string name="update_details">Update Details</string>
    <string name="already_user_sign_in">Already user? Sign In</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="Venue">Venue</string>
    <string name="Date">Date</string>

</resources>
